[gd_scene load_steps=9 format=3 uid="uid://bg5fgtcxdb0f5"]

[ext_resource type="Script" path="res://Environment/MapAirport/MapAirport.gd" id="1_bb3bl"]
[ext_resource type="Script" path="res://Environment/LandingArea.gd" id="3_7dyxi"]
[ext_resource type="PackedScene" uid="uid://d0fcnooujkgip" path="res://Environment/GroundPlane.tscn" id="3_ipf8y"]
[ext_resource type="PackedScene" uid="uid://uxya2x0uw64m" path="res://Environment/Map1/Map1.glb" id="3_s104d"]
[ext_resource type="PackedScene" uid="uid://befsooyoi5ib3" path="res://GateCheckpoint/GateCheckpoint.tscn" id="6_osbfy"]
[ext_resource type="Script" path="res://GateCheckpoint/GateManager.gd" id="8_km4je"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x1sbe"]
size = Vector3(9.90454, 0.741791, 59.7122)

[sub_resource type="BoxShape3D" id="BoxShape3D_r2f64"]
size = Vector3(10.6475, 1, 60.6924)

[node name="Environment" type="Node3D"]
script = ExtResource("1_bb3bl")

[node name="Airport" type="Node3D" parent="."]

[node name="3DModel" parent="Airport" instance=ExtResource("3_s104d")]
transform = Transform3D(0.215, 0, 0, 0, 0.215, 0, 0, 0, 0.215, 0, 0, 0)

[node name="LandingStripBody" type="StaticBody3D" parent="Airport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 4)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Airport/LandingStripBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.129105, 2.64954)
shape = SubResource("BoxShape3D_x1sbe")

[node name="AreaLandingStrip" type="Area3D" parent="Airport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.19501, 0, 0)
monitorable = false
script = ExtResource("3_7dyxi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Airport/AreaLandingStrip"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.243164, -0.234049, 6.23245)
shape = SubResource("BoxShape3D_r2f64")

[node name="GroundPlane" parent="." instance=ExtResource("3_ipf8y")]

[node name="PlaneGateManager" type="Node3D" parent="."]
script = ExtResource("8_km4je")

[node name="GateCheckpoint" parent="PlaneGateManager" instance=ExtResource("6_osbfy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.21932, 5.94977, 65.0542)

[node name="GateCheckpoint2" parent="PlaneGateManager" instance=ExtResource("6_osbfy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.21932, 8.75206, 85.9565)

[node name="GateCheckpoint3" parent="PlaneGateManager" instance=ExtResource("6_osbfy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.21932, 11.4621, 117.62)

[node name="GateCheckpoint4" parent="PlaneGateManager" instance=ExtResource("6_osbfy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.21932, 15.3529, 148.044)

[node name="GateCheckpoint5" parent="PlaneGateManager" instance=ExtResource("6_osbfy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.21932, 18.8821, 181.107)

[node name="SkyDivingGateManager" type="Node3D" parent="."]
script = ExtResource("8_km4je")

[node name="GateCheckpoint" parent="SkyDivingGateManager" instance=ExtResource("6_osbfy")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -17.8861, 89.6972, -1.53959)

[node name="GateCheckpoint2" parent="SkyDivingGateManager" instance=ExtResource("6_osbfy")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -17.8861, 216.797, -1.53959)

[node name="GateCheckpoint3" parent="SkyDivingGateManager" instance=ExtResource("6_osbfy")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -17.8861, 395.757, -1.53959)

[node name="StartPositions" type="Node3D" parent="."]

[node name="Plane1" type="Node3D" parent="StartPositions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.21932, 19.6855, 233.118)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.984196, 0.113116, -0.136249, 0, 0.7694, 0.638767, 0.177085, -0.628672, 0.75724, 0, 0, 0)
shadow_enabled = true
